RESOLVED FIXED162777
[SOUP] Cleanup persistent credential storage code
https://bugs.webkit.org/show_bug.cgi?id=162777
Summary [SOUP] Cleanup persistent credential storage code
Carlos Garcia Campos
Reported 2016-09-30 03:02:22 PDT
We have this feature behind ENABLE_CREDENTIAL_STORAGE flag, which is confusing, because we use credential storage unconditionally and this is only about persistent storage. Also the flag assumes libsecret is available, and since it's only used by GTK sometimes we use GTK ifdefs instead of CREDENTIAL_STORAGE. So, I think we should use USE(LIBSECRET) instead, and reduce a bit the ifdefs in common soup code. Another problem is that current implementation is always used, while it should depend on the current network storage session and never used in ephemeral sessions.
Attachments
Patch (31.44 KB, patch)
2016-09-30 03:07 PDT, Carlos Garcia Campos
no flags
Try to fix EFL build (32.90 KB, patch)
2016-09-30 03:28 PDT, Carlos Garcia Campos
no flags
Try to fix EFL build (32.90 KB, patch)
2016-09-30 03:39 PDT, Carlos Garcia Campos
achristensen: review+
Carlos Garcia Campos
Comment 1 2016-09-30 03:07:27 PDT
WebKit Commit Bot
Comment 2 2016-09-30 03:10:18 PDT
Attachment 290313 [details] did not pass style-queue: ERROR: Source/WebCore/platform/network/soup/NetworkStorageSessionSoup.cpp:143: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/network/NetworkStorageSession.h:74: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/network/NetworkStorageSession.h:92: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 3 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Carlos Garcia Campos
Comment 3 2016-09-30 03:28:14 PDT
Created attachment 290320 [details] Try to fix EFL build
WebKit Commit Bot
Comment 4 2016-09-30 03:30:54 PDT
Attachment 290320 [details] did not pass style-queue: ERROR: Source/WebCore/platform/network/soup/NetworkStorageSessionSoup.cpp:143: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/network/NetworkStorageSession.h:74: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/network/NetworkStorageSession.h:92: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 3 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Carlos Garcia Campos
Comment 5 2016-09-30 03:39:42 PDT
Created attachment 290322 [details] Try to fix EFL build
WebKit Commit Bot
Comment 6 2016-09-30 03:41:37 PDT
Attachment 290322 [details] did not pass style-queue: ERROR: Source/WebCore/platform/network/soup/NetworkStorageSessionSoup.cpp:143: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/network/NetworkStorageSession.h:74: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/platform/network/NetworkStorageSession.h:92: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 3 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alex Christensen
Comment 7 2016-09-30 07:23:22 PDT
Comment on attachment 290322 [details] Try to fix EFL build View in context: https://bugs.webkit.org/attachment.cgi?id=290322&action=review > Source/WebCore/platform/network/soup/NetworkStorageSessionSoup.cpp:201 > + completionHandler(Credential()); { }
Carlos Garcia Campos
Comment 8 2016-10-03 03:35:32 PDT
Note You need to log in before you can comment on or make changes to this bug.