Source/WebCore/platform/gtk/GRefPtrGtk.h
@@ -31,7 +31,7 @@ namespace WTF {
 template <> GtkTargetList* refGPtr(GtkTargetList* ptr);
 template <> void derefGPtr(GtkTargetList* ptr);
 
-#if ENABLE(CREDENTIAL_STORAGE)
+#if USE(LIBSECRET)
 template <> SecretValue* refGPtr(SecretValue* ptr);
 template <> void derefGPtr(SecretValue* ptr);
 #endif
